feat(weather-app): functioning basic api calls

--- a/website/style.css
+++ b/website/style.css
@@ -25,26 +25,27 @@ body{
 }
 
 #entryHolder{
-
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  width: 300px;
+  height: 300px;
+  border: solid white 5px;
 }
 
 #date{
-
+  width: 100px;
+  height: 100px;
 }
 
 #temp{
-
+  width: 100px;
+  height: 100px;
 }
 
 #content{
-
-}
-
-.headline {
-
-}
-.title{
-
+  width: 100px;
+  height: 100px;
 }
 
 /*  Basic Styling To Override Default For Basic HTML Elements */
